--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
             <input type="hidden" id="edit-id">
             <input type="hidden" id="edit-type">
 
-            <button class="btn-primary" onclick="saveEditItem()">Lưu thay đổi</button>
-            <button class="btn-secondary" onclick="deleteItem()" style="background:#e53935; margin-top:10px;">Xóa mục này</button>
-            <button class="btn-secondary" onclick="closeEditModal()" style="background:#757575; margin-top:10px;">Hủy</button>
+            <button type="button" class="btn-primary" onclick="saveEditItem()">Lưu thay đổi</button>
+            <button type="button" class="btn-secondary" onclick="deleteItem()" style="background:#e53935; margin-top:10px;">Xóa mục này</button>
+            <button type="button" class="btn-secondary" onclick="closeEditModal()" style="background:#757575; margin-top:10px;">Hủy</button>
         </div>
     </div>
 
